completed Chapters 4 and 6

--- a/templates/acronyms.tex
+++ b/templates/acronyms.tex
@@ -64,5 +64,6 @@
 \newacronym{tp}{TP}{True Positive}
 \newacronym{tpr}{TPR}{True Positive Rate}
 \newacronym{usgs}{USGS}{United States Geological Survey}
-\newacronym{voi}{VOI}{Value of Information}
+\newacronym{vag}{VAG}{Value at Gain}
+\newacronym{var}{VAR}{Value at Risk}
 \newacronym{xgb}{XGB}{XGBoost}
